welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var vuBiscuit :Boolean
    ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (vuBiscuit=false){
                ^Program:6: error: type mismatch;
 found   : Int(1)
 required: Boolean
	if(estSurBiscuit) vuBiscuit=1}
                                    ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (vuBiscuit=false){
^